# starlette-marshal

./: LICENSE  README.md  setup.cfg
starlette_marshal/: __init__.py  rapidjson.py
