[metadata]
name = starlette-marshal
version = attr: starlette_marshal.__version__
url = https://github.com/xtarlette/starlette-marshal
author = Xurvan
author_email = xojtaba@gmail.com
description = Dynamic JSON support for Starlette
long_description = file: README.md
license = Apache License 2.0
license_files = LICENSE
long_description_content_type = text/markdown
classifiers =
    Development Status :: 3 - Alpha
    Intended Audience :: Developers
    Topic :: Software Development
    License :: OSI Approved :: Apache Software License
    Programming Language :: Python :: 3
project_urls =
    Source = https://github.com/xtarlette/starlette-marshal
    Tracker = https://github.com/xtarlette/starlette-marshal/issues

[options]
python_requires = >=3.8
packages = find:
zip_safe = false
install_requires =
    starlette >= 0.17

[options.extras_require]
rapidjson =
    python-rapidjson >= 1.5
